fixed scrollbar

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -28,15 +28,21 @@
 }
 
 html {
-	height: 100%;
+	height: 100vh;
+	overflow: hidden;
 }
 
 body {
 	margin: 0;
-	height: 100%;
+	height: 100vh;
 	background-color: var(--background-color);
 	color: var(--text-color);
 	font-family: "Roboto", sans-serif;
+	overflow: hidden;
+}
+
+#app {
+	height: 100vh;
 }
 
 #title {
@@ -142,4 +148,18 @@ button {
 
 .page {
 	margin-top: 50px;
+}
+
+#pagecontent {
+	position: relative;
+	overflow-y: auto;
+	height: 100%;
+	width: 100%;
+}
+
+@media screen and (min-width: 960px) {
+    #pagecontent {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
 }
